[package]
name = "pixeleagle-cli"
version = "0.3.0"
edition = "2024"
description = "CLI for PixelEagle visual regression testing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vleue/pixeleagle-cli"
publish = false

[features]
blocking = []
cli = ["dep:clap"]
self-hosted = []

[[bin]]
name = "pixeleagle"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"], optional = true }
reqwest = { version = "0.13", features = ["json", "multipart", "form"] }
tokio = { version = "1.51", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.22", features = ["v4", "serde"] }
sha2 = "0.11"
hex = "0.4"
